# nginx-log-parser

./: .Dockerfile  .Makefile  .gitignore  LICENSE  mypy.ini  prj.txt  pyproject.toml  readme.md
.github/workflows/: ci.yml
src/nginx_log_stats/: api.py  config.py  log_parser.py  logging_config.py  main.py  models.py  parser.py  service.py  stats.py
tests/: test_api.py  test_parser.py  test_statistics.py
