[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nginx-log-stats"
version = "0.1.0"
description = "Service for computing statistical report of nginx access logs (mean, median, percentiles, etc.)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Eugen Mac", email = "eugenmac56@mail.ru" }
]
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.110,<0.120",
  "uvicorn[standard]>=0.27,<0.30",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
  "requests>=2.32",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"